--- a/index.qmd
+++ b/index.qmd
@@ -1,26 +1,26 @@
-# Welcome {.unnumbered}
+# 欢迎 {.unnumbered}
 
-This is the website for the 2nd edition of **"R for Data Science"**.
-This book will teach you how to do data science with R: You'll learn how to get your data into R, get it into the most useful structure, transform it and visualize.
+这里是《**R 数据科学**》（[*R for Data Science*](https://r4ds.hadley.nz/)）第 2 版的汉化网站。
+本书将教你如何用 R 语言进行数据科学实践：你将学习如何将数据导入 R，如何将其整理为最有用结构，以及如何转换和可视化数据。
 
-In this book, you will find a practicum of skills for data science.
-Just as a chemist learns how to clean test tubes and stock a lab, you'll learn how to clean data and draw plots---and many other things besides.
-These are the skills that allow data science to happen, and here you will find the best practices for doing each of these things with R.
-You'll learn how to use the grammar of graphics, literate programming, and reproducible research to save time.
-You'll also learn how to manage cognitive resources to facilitate discoveries when wrangling, visualizing, and exploring data.
+在本书中，你将找到一套数据科学的实践技能。
+就像化学家学习如何清洗试管和储备实验室一样，你将学习如何清洗数据和绘制图表，以及许多其他技能。
+这些是数据科学得以实现的基石，在这里你将找到用 R 完成这些任务的最佳实践。
+你将学习如何利用图形语法 (grammar of graphics)、文学编程 (literate programming) 和可重复研究 (reproducible research) 来节省时间。
+你还将学习如何管理认知资源，以便在整理、可视化和探索数据时促进新发现。
 
-This website is and will always be free, licensed under the [CC BY-NC-ND 3.0](https://creativecommons.org/licenses/by-nc-nd/3.0/us/) License.
-If you'd like a physical copy of the book, you can order it on [Amazon](https://www.amazon.com/dp/1492097403?&tag=hadlwick-20).
-If you appreciate reading the book for free and would like to give back, please make a donation to [Kākāpō Recovery](https://www.doc.govt.nz/kakapo-donate): the [kākāpō](https://www.youtube.com/watch?v=9T1vfsHYiKY) (which appears on the cover of R4DS) is a critically endangered parrot native to New Zealand; there are only 244 left.
+本网站是并将永远是免费的，采用 [CC BY-NC-ND 3.0](https://creativecommons.org/licenses/by-nc-nd/3.0/us/) 许可协议。
+如果你想要本书的实体版，可以在[亚马逊](https://www.amazon.com/dp/1492097403?&tag=hadlwick-20)上购买。
+如果你感谢免费阅读本书并希望有所回馈，请向 [Kākāpō Recovery](https://www.doc.govt.nz/kakapo-donate) 捐款：[kākāpō](https://www.youtube.com/watch?v=9T1vfsHYiKY)（出现在 R4DS 封面上的动物）是新西兰一种极度濒危的鹦鹉；目前仅存 244 只。
 
-If you speak another language, you might be interested in the freely available translations of the 1st edition:
+如果你使用其他语言，你可能会对第 1 版的免费译本感兴趣：
 
--   [Spanish](http://es.r4ds.hadley.nz)
--   [Italian](https://it.r4ds.hadley.nz)
--   [Turkish](https://tr.r4ds.hadley.nz)
--   [Portuguese](https://pt.r4ds.hadley.nz)
+-   [西班牙语](http://es.r4ds.hadley.nz)
+-   [意大利语](https://it.r4ds.hadley.nz)
+-   [土耳其语](https://tr.r4ds.hadley.nz)
+-   [葡萄牙语](https://pt.r4ds.hadley.nz)
 
-You can find suggested answers to exercises in the book at <https://mine-cetinkaya-rundel.github.io/r4ds-solutions>.
+你可以在 <https://mine-cetinkaya-rundel.github.io/r4ds-solutions> 找到书中练习的建议答案。
 
-Please note that R4DS uses a [Contributor Code of Conduct](https://contributor-covenant.org/version/2/0/CODE_OF_CONDUCT.html).
-By contributing to this book, you agree to abide by its terms.
+请注意，R4DS 遵循[贡献者行为准则](https://contributor-covenant.org/version/2/0/CODE_OF_CONDUCT.html)。
+通过为本书做贡献，你同意遵守其条款。
