--- a/data-transform.qmd
+++ b/data-transform.qmd
@@ -702,7 +702,7 @@ flights |>
     ```
     
 
-## 案例研究：聚合与样本量 {#sec-sample-size}
+## 案例 {#sec-sample-size}
 
 每当你进行任何聚合操作时，包含一个计数（`n()`）总是一个好主意。这样，你可以确保你不是基于非常少量的数据得出结论。我们将用 **Lahman** 包中的一些棒球数据来演示这一点。具体来说，我们将比较一个球员击中安打（`H`）的比例与他们尝试将球打入场内（`AB`）的次数：
 
